PCA implementation using netlib-java (squashed commits)